# mlops-serve-mobilenetv3-plain

./: Makefile  README.md  main.py  pyproject.toml
scripts/: download_save.py  load_serve.py
src/: main.py  utils.py
