[project]
name = "mlops-serve-mobilenetv3-plain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
